<resources>
    <string name="app_name">My First App</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="radio_Male">Male</string>
    <string name="radio_Female">Female</string>
    <string name="select_gender">Select gender:</string>
    <string name="date_of_birth_label">Date of birth:</string>
    <string name="email_hint">Enter an email address</string>
    <string name="button_submit">Submit</string>
    <string name="password_hint">Enter a password</string>
</resources>
